--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 langchain==0.0.123
-
 spacy==3.7.4
-
 openai==1.30.1
-
 streamlit==1.35.0
-
 faiss-cpu==1.7.4
+PyMuPDF==1.23.0
+python-docx==0.8.11
+pandas==2.0.3
+plotly==5.15.0
